name:           HGobstones
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         root

library
  hs-source-dirs:   src
  build-depends:    
                   base >= 4,
                   containers,
                   blank-canvas,
                   lens,
                   mtl
  ghc-options:      -Wall
  exposed-modules:  HGobstones
  other-modules:    
                   Canvas,
                   HGobstonesApp,
                   HGobstonesDraw,
                   HGobstonesLang,
                   Main

executable Prueba
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
  other-modules:   
                   Canvas,
                   HGobstones,
                   HGobstonesApp,
                   HGobstonesDraw,
                   HGobstonesLang

